[project]
name = "monitoring-web-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "sqlalchemy>=2.0.51",
]

[tool.fastapi]
entrypoint = "main:app"
